sfdx-source/force-app/main/default/objects/Brief_Item__c/Brief_Item__c.object-meta.xml
<CustomObject>
    <description>LEM-2983: Campaign Items specific to certain Quote Line Items are captured in Brief Items information.</description>
    <label>Brief Item</label>
    <nameField>
        <displayFormat>BI-{000000}</displayFormat>
        <label>Brief Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brief Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>