sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-2983: Captures the account with which the Campaign Item is associated.</description>
    <label>ZAccount</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Brief Items</relationshipLabel>
    <relationshipName>Brief_Items</relationshipName>
    <type>Lookup</type>
</CustomField>