sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Account_Val__c.field-meta.xml
<CustomField>
    <fullName>Account_Val__c</fullName>
    <description>LEM-6823</description>
    <formula>Quote_Line__r.SBQQ__Quote__r.SBQQ__Account__r.Name</formula>
    <inlineHelpText>Captures Account Id related to opportunity</inlineHelpText>
    <label>Account</label>
    <type>Text</type>
</CustomField>