sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Ad_Ops_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Ad_Ops_Campaign_Name__c</fullName>
    <description>LEM-5421</description>
    <label>Ad Ops Campaign Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>