sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <description>LEM-3674: It is used to store any additional information related to the Brief Item.</description>
    <inlineHelpText>Please list any additional notes you would like Ops to know for this campaign.</inlineHelpText>
    <label>Additional Notes From Sales</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>