sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Additional_Notes_From_Ops__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes_From_Ops__c</fullName>
    <description>LEM-5110: To improve the Brief Item process.</description>
    <inlineHelpText>Please list any additional notes regarding campaign set up, reminders, etc.</inlineHelpText>
    <label>Additional Notes From Ops</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>