sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Affinity_Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Affinity_Target_Audience__c</fullName>
    <description>LEM-11629: Layout Enhancements - Opportunity and Brief Item.</description>
    <label>Affinity Target Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Affinity_Target_Audience</valueSetName>
    </valueSet>
</CustomField>