sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Agency_Contract__c.field-meta.xml
<CustomField>
    <fullName>Agency_Contract__c</fullName>
    <description>LEM-10467: Tracking Two Briefs as One Uniform Campaign
LEM-9347 - update field type to URL</description>
    <label>Agency Contract</label>
    <type>Url</type>
</CustomField>