sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Approved_by_NV_Merchandising__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_NV_Merchandising__c</fullName>
    <description>LEM-5110: To improve the Brief Item process.</description>
    <label>Approved by NV Merchandising</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>