sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Assigned_From_Queue__c.field-meta.xml
<CustomField>
    <fullName>Assigned_From_Queue__c</fullName>
    <description>LEM-3676: Q-Assign stores Queue name on post assignment.</description>
    <label>Assigned From Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>