sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Audience_Details__c.field-meta.xml
<CustomField>
    <fullName>Audience_Details__c</fullName>
    <description>LEM-2983: Captures the audience details.</description>
    <inlineHelpText>Provide the audience details discussed during the sales process</inlineHelpText>
    <label>Audience Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>