sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Audience_Targeting__c.field-meta.xml
<CustomField>
    <fullName>Audience_Targeting__c</fullName>
    <description>LEM-2983: Captures the targeted audience for the products.</description>
    <label>Audience Targeting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Users</fullName>
            </value>
            <value>
                <fullName>New Customer to Merchant</fullName>
            </value>
            <value>
                <fullName>Existing Customers to Merchant</fullName>
            </value>
            <value>
                <fullName>DashPass Subscribers</fullName>
            </value>
            <value>
                <fullName>Non-DashPass Subscribers</fullName>
            </value>
            <value>
                <fullName>New Users to DoorDash</fullName>
            </value>
            <value>
                <fullName>Churned Users from Store</fullName>
            </value>
            <value>
                <fullName>New Users to Convenience</fullName>
            </value>
            <value>
                <fullName>New Users to Pickup</fullName>
            </value>
            <value>
                <fullName>New Users to Grocery</fullName>
            </value>
            <value>
                <fullName>DoorDash for Work Users</fullName>
            </value>
            <value>
                <fullName>New Users to Merchant</fullName>
            </value>
            <value>
                <fullName>Existing Users to Convenience</fullName>
            </value>
            <value>
                <fullName>Existing Users to Grocery</fullName>
            </value>
             <value>
                <fullName>Existing Users to Merchant</fullName>
            </value>
             <value>
                <fullName>Custom Audience</fullName>
            </value>
             <value>
                <fullName>Other</fullName>
            </value>
             <value>
                <fullName>DDFW User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>