sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Audit_Details__c.field-meta.xml
<CustomField>
    <fullName>Audit_Details__c</fullName>
    <description>LEM-2983: Captures the details of the audits related to the Brief.</description>
    <inlineHelpText>Provide any notes regarding the audit here.</inlineHelpText>
    <label>Audit Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>