sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Auto_Bidding__c.field-meta.xml
<CustomField>
    <fullName>Auto_Bidding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-3674: It indicates if the Brief Item will be auto-bid or not.</description>
    <label>Auto-Bidding</label>
    <type>Checkbox</type>
</CustomField>