sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Average_Daily_Budget__c.field-meta.xml
<CustomField>
    <fullName>Average_Daily_Budget__c</fullName>
    <description>LEM-2983: Captures the average daily budget related tot eh campaign item.</description>
    <label>Average Daily Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>