sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Banner_Dates__c.field-meta.xml
<CustomField>
    <fullName>Banner_Dates__c</fullName>
    <description>LEM-2983: Captures the Banner Dates associated with the Brief Item.</description>
    <label>Banner Dates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>