sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Banner_Types__c.field-meta.xml
<CustomField>
    <fullName>Banner_Types__c</fullName>
    <description>LEM-2983: Captures the banner types associated with the Brief Item.</description>
    <label>Banner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Page</fullName>
            </value>
            <value>
                <fullName>Offers Hub</fullName>
            </value>
            <value>
                <fullName>Vertical Page</fullName>
            </value>
            <value>
                <fullName>Store Page Banner</fullName>
            </value>
            <value>
                <fullName>Post Checkout</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>