sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Bid__c.field-meta.xml
<CustomField>
    <fullName>Bid__c</fullName>
    <description>LEM-2983: Captures the bid for the Campaign Item.</description>
    <label>Bid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>