sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Brand_Logo__c.field-meta.xml
<CustomField>
    <fullName>Brand_Logo__c</fullName>
    <description>LEM-9349: Minor Field Addition to Brief Item</description>
    <inlineHelpText>Brand&apos;s logo, in a 1:1 aspect ratio, at lest 200x200 resolution</inlineHelpText>
    <label>Brand Logo</label>
    <type>Url</type>
</CustomField>