sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Brand_SKU_List__c.field-meta.xml
<CustomField>
    <fullName>Brand_SKU_List__c</fullName>
    <description>LEM-5110: To improve the Brief Item process.</description>
    <inlineHelpText>Please link a list of brands/SKUs that should be included</inlineHelpText>
    <label>Brand/SKU List</label>
    <type>Url</type>
</CustomField>