sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Branded_Collection_Activation_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Branded_Collection_Activation_Ticket__c</fullName>
    <description>LEM-5421</description>
    <inlineHelpText>If the campaign is DoorDash funded without a contract, Ad Ops to provide JIRA link here.</inlineHelpText>
    <label>Branded Collection: Activation Ticket</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>