sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Branded_Collection_Deactivation_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Branded_Collection_Deactivation_Ticket__c</fullName>
    <description>LEM-5110: To improve the Brief Item process.</description>
    <label>Branded Collection: Deactivation Ticket</label>
    <type>TextArea</type>
</CustomField>