sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Branded_Collection_Type__c.field-meta.xml
<CustomField>
    <fullName>Branded_Collection_Type__c</fullName>
    <description>LEM-5110: To improve the Brief Item process.</description>
    <label>Branded Collection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promo</fullName>
            </value>
            <value>
                <fullName>Awareness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>