sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Branded_Collection_Working_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Branded_Collection_Working_Sheet__c</fullName>
    <description>LEM-5110: To improve the Brief Item process.</description>
    <label>Branded Collection: Working Sheet</label>
    <type>Url</type>
</CustomField>