sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Brands__c.field-meta.xml
<CustomField>
    <fullName>Brands__c</fullName>
    <description>LEM-2983: Captures the Brands onto Campaign Items from the Quote Line Item.</description>
    <label>Brands</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>