sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Brief__c.field-meta.xml
<CustomField>
    <fullName>Brief__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-2983: Captures the parent to the Brief Item.</description>
    <label>Brief</label>
    <referenceTo>Brief__c</referenceTo>
    <relationshipLabel>Brief Items</relationshipLabel>
    <relationshipName>Brief_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>