sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <description>LEM-2983: Captures the budget associated with Brief Item.
LEM-9346: APEX - Fixing the Process for In-Campaign Changes</description>
    <inlineHelpText>Provide the total budget for the product here.</inlineHelpText>
    <label>Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>