sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Budget_Notes__c.field-meta.xml
<CustomField>
    <fullName>Budget_Notes__c</fullName>
    <description>LEM-2983: Captures the max budget of the campaign.</description>
    <inlineHelpText>If the Budget Period is not &apos;Campaign (total)&apos; and there&apos;s an additional max budget for the entire campaign length, provide it here.</inlineHelpText>
    <label>Budget Notes</label>
    <type>TextArea</type>
</CustomField>