sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Budget_Period__c.field-meta.xml
<CustomField>
    <fullName>Budget_Period__c</fullName>
    <description>LEM-2983: Captures the budget period associated with the Brief Item.
LEM-9346: APEX - Fixing the Process for In-Campaign Changes</description>
    <inlineHelpText>Provide the budget period for the product here.</inlineHelpText>
    <label>Budget Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily (recurring)</fullName>
            </value>
            <value>
                <fullName>Weekly (recurring)</fullName>
            </value>
            <value>
                <fullName>Monthly (recurring)</fullName>
            </value>
            <value>
                <fullName>Campaign (total)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>