sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Budget_Period_Val__c.field-meta.xml
<CustomField>
    <fullName>Budget_Period_Val__c</fullName>
    <description>LEM-6823</description>
    <formula>TEXT(Quote_Line__r.Budget_Period__c)</formula>
    <inlineHelpText>Captures Budget Period for the product</inlineHelpText>
    <label>ZBudget Period</label>
    <type>Text</type>
</CustomField>