sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Budget_Val__c.field-meta.xml
<CustomField>
    <fullName>Budget_Val__c</fullName>
    <description>LEM-6823
LEM-9346: APEX - Fixing the Process for In-Campaign Changes</description>
    <formula>Quote_Line__r.Budget__c</formula>
    <inlineHelpText>Captures total budget from product</inlineHelpText>
    <label>ZBudget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>