sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Campaign_ID_s_36_digit_ID_only__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID_s_36_digit_ID_only__c</fullName>
    <description>LEM-17006</description>
    <inlineHelpText>Campaign IDs are limited to 36 characters per entry. Make sure to enter each Campaign ID individually.</inlineHelpText>
    <label>Campaign ID(s) (36-digit ID only)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>