sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Campaign_ID_s__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID_s__c</fullName>
    <description>LEM-2983: Captures the Ids of Campaigns associated with the Brief Item.
    LEM-17006 : Field label changed</description>
    <inlineHelpText>Provide the campaign ID(s) here.</inlineHelpText>
    <label>Historical Campaign ID(s) field</label>
    <length>38000</length>
    <type>LongTextArea</type>
</CustomField>