sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Campaign_Link_s__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Link_s__c</fullName>
    <description>LEM-2983: Links associated to the Campaign will be captured.</description>
    <inlineHelpText>Provide the link to the campaign(s) here.</inlineHelpText>
    <label>Campaign Link(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>