sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <description>LEM-2983: Captures the Campaign Name from the related Quote Line Item.</description>
    <label>Campaign Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>