sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Campaign_Pacing__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Pacing__c</fullName>
    <description>LEM-5110: To improve the Brief Item process.
LEM-12800: Clean Up Brief and Brief Item Objects</description>
    <inlineHelpText>Indicate whether you want front load or even pacing for your campaign</inlineHelpText>
    <label>Apply Front Load Budget Pacing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Even pacing</fullName>
                <isActive>false</isActive>
                <label>Even pacing</label>
            </value>
            <value>
                <fullName>Front load</fullName>
                <isActive>false</isActive>
                <label>Front load</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>