sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Carousel_ID__c.field-meta.xml
<CustomField>
    <fullName>Carousel_ID__c</fullName>
    <description>LEM-5421</description>
    <label>Carousel ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>