sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Categories_Bid__c.field-meta.xml
<CustomField>
    <fullName>Categories_Bid__c</fullName>
    <label>Categories Bid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>