sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Co_funding_Cap_for_DPEI__c.field-meta.xml
<CustomField>
    <fullName>Co_funding_Cap_for_DPEI__c</fullName>
    <inlineHelpText>This field is only applicable to promos associated to DPEI</inlineHelpText>
    <label>Co-funding Cap for DPEI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>