sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Collection_Title__c.field-meta.xml
<CustomField>
    <fullName>Collection_Title__c</fullName>
    <description>LEM-9349: Minor Field Addition to Brief Item</description>
    <inlineHelpText>Title that will appear on top of the Sponsored Brand, next to the brand&apos;s logo</inlineHelpText>
    <label>Collection Title</label>
    <length>20</length>
    <type>Text</type>
</CustomField>