sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Collections_Bid__c.field-meta.xml
<CustomField>
    <fullName>Collections_Bid__c</fullName>
    <label>Collections Bid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>