sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/CPG_Single_SKU_Mix_Match_Promo__c.field-meta.xml
<CustomField>
    <fullName>CPG_Single_SKU_Mix_Match_Promo__c</fullName>
    <description>LEM-5110: To improve the Brief Item process.</description>
    <inlineHelpText>Please select yes if the promo is a complex deal. Note that complex deals can only be run on CnG</inlineHelpText>
    <label>CPG Single SKU/Mix &amp; Match Promo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>