sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/CRM_Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>CRM_Campaign_Type__c</fullName>
    <description>LEM-2983: Captures the CRM Campaign Type for the Brief Item.</description>
    <inlineHelpText>Indicate the desired CRM communication.</inlineHelpText>
    <label>User Communication Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Push Notification</fullName>
            </value>
            <value>
                <fullName>Email + Push Notification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>