sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/CRM_Figma_Template__c.field-meta.xml
<CustomField>
    <fullName>CRM_Figma_Template__c</fullName>
    <description>LEM-13267 - DPEI Brief Item Generation</description>
    <label>CRM Figma Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>