sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/CRM_Iterable_Link__c.field-meta.xml
<CustomField>
    <fullName>CRM_Iterable_Link__c</fullName>
    <description>LEM-5421</description>
    <label>CRM Iterable Link(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>