sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Custom_Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Custom_Promo_Code__c</fullName>
    <description>LEM-5421</description>
    <inlineHelpText>If promo redemptions require a promo code, provide the code here.</inlineHelpText>
    <label>Custom Promo Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>