sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Day_Time_of_Week__c.field-meta.xml
<CustomField>
    <fullName>Day_Time_of_Week__c</fullName>
    <description>LEM-2983: Captures the Day/Time of the Week related to the Brief Item.</description>
    <label>Day/Time of Week</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>