sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Description_of_Campaign_Setup_Errors__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Campaign_Setup_Errors__c</fullName>
    <description>LEM-2983: Captures the details of the setup errors associated with the Brief Item.</description>
    <inlineHelpText>Provide a description of each of the campaign setup errors found for this product.</inlineHelpText>
    <label>Description of Campaign Setup Errors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>