sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Discount_Percentage_for_Consumer__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percentage_for_Consumer__c</fullName>
    <description>LEM-2983: Captures the discount percentage of the consumer.</description>
    <inlineHelpText>This field reflects the discount percentage offered to the consumer.</inlineHelpText>
    <label>Discount Percentage for Consumer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>