sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Discounted_Delivery_Fee__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Delivery_Fee__c</fullName>
    <description>LEM-3674: It is used to store the discounted delivery fee for the Brief Item.</description>
    <label>Discounted Delivery Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>