sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/DPEI_Item_Tagging__c.field-meta.xml
<CustomField>
    <fullName>DPEI_Item_Tagging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-13267 - DPEI Brief Item Generation</description>
    <label>DPEI Item Tagging</label>
    <type>Checkbox</type>
</CustomField>