sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Draft_Agency_Contract__c.field-meta.xml
<CustomField>
    <fullName>Draft_Agency_Contract__c</fullName>
    <description>LEM-16593 holds link to draft io template</description>
    <label>Draft Agency Contract</label>
    <type>Url</type>
</CustomField>