sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Draft_Contract__c.field-meta.xml
<CustomField>
    <fullName>Draft_Contract__c</fullName>
    <description>LEM-16593: holds link to draft io template</description>
    <label>Draft Contract</label>
    <type>Url</type>
</CustomField>