sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>LEM-2983: Captures the End Date of the Campaign Item.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>