sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Estimated_Total_Investment__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Total_Investment__c</fullName>
    <description>LEM-5110: To improve the Brief Item process.</description>
    <formula>Quote_Line__r.Estimated_Total_Investment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Total Investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>