sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Evergreen_Ongoing_Promo__c.field-meta.xml
<CustomField>
    <fullName>Evergreen_Ongoing_Promo__c</fullName>
    <description>LEM-3674: It indicates if the promotion is going to be active for a long period of time.</description>
    <label>Evergreen/Ongoing Promo?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>