sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Experiment_Name__c.field-meta.xml
<CustomField>
    <fullName>Experiment_Name__c</fullName>
    <description>LEM-2983: Captures the experiment name.</description>
    <inlineHelpText>Provide the experiment name here.</inlineHelpText>
    <label>Experiment Name</label>
    <type>TextArea</type>
</CustomField>